# causalmix

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: set_up.py
notebooks/CausalMix_validate/: 01_setup_data.ipynb  02_convae_standalone.ipynb  03_scenario1_homogeneous.ipynb  05_scenario3_nonlinear.ipynb
notebooks/cate/: 01_CATE_single_dataset_test.ipynb  02_CATE_App1_estimator_comparison.ipynb  03_CATE_App2_hyperparameter_tuning.ipynb  04_CATE_App3_power_analysis.ipynb
notebooks/examples/: causalmix_example.ipynb  convae_example.ipynb
notebooks/paper/: 01_validation_tables.ipynb  02_validation_plots.ipynb  03_app1_tables_figures.ipynb  04_app2_hyperparameter_plots.ipynb  05_app3_power_plots.ipynb
results/output/cate_estimator/: per_rep_biased_results.csv  per_rep_hp_results.csv  per_rep_results.csv  summary_biased_results.csv  summary_biased_results_rmse.csv  summary_hp_results.csv  summary_results.csv  summary_results_rmse.csv
results/output/study_design/: per_rep_power_allcov.csv  per_rep_power_n20000.csv  power_by_n_allcov.csv  power_by_n_n20000.csv
results/output/validation/: m1_tables_mean.xlsx  m2_tables_mean.xlsx  m3_tables_mean.xlsx  m4_tables_mean.xlsx  m5_tables_mean.xlsx  s1_causal.csv  s1_dist.csv  s1_privacy.csv  s2_causal.csv  s2_dist.csv  s2_privacy.csv
results/tables/: est_coverage.tex  est_coverage_biased.tex  m1_causal.tex  m1_dist.tex  m1_privacy.tex  m2_causal.tex  m2_dist.tex  m2_privacy.tex  m3_causal.tex  m3_dist.tex  m3_privacy.tex
src/causalmix/: __init__.py
src/causalmix/cate/: __init__.py  estimators.py  (+1 more)
(+11 files in other folders)
