[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "causalmix"
version = "0.1.0"
description = "CausalMix: Controllable Generative Sandbox for Causal Inference"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Qi Zhang" }
]

# Keep dependencies in requirements.txt
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
